[gd_scene load_steps=2 format=3 uid="uid://bjc06xq64bem"]

[ext_resource type="Script" uid="uid://ieu2tvt2t4sg" path="res://add_quiz.gd" id="1_tauf1"]

[node name="AddQuiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tauf1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuizName" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Quiz Name"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestionText" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Question?"

[node name="QuestionInput" type="TextEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "The capital of France?"
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestionTypeText" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Question Type?"

[node name="QuestionTypeInput" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Multiple Choice"
popup/item_0/id = 0
popup/item_1/text = "Identification"
popup/item_1/id = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionDText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Option D"

[node name="OptionDInput" type="TextEdit" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Paris"
wrap_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionCText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "Option C"

[node name="OptionCInput" type="TextEdit" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Abuja"
wrap_mode = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionBText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer3"]
layout_mode = 2
text = "Option B"

[node name="OptionBInput" type="TextEdit" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Accra"
wrap_mode = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionAText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer4"]
layout_mode = 2
text = "Option A"

[node name="OptionAInput" type="TextEdit" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Madrid"
wrap_mode = 1

[node name="MCAnswerText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiple-Choice Answer?"

[node name="MCAnswerInput" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
item_count = 4
popup/item_0/text = "Option A"
popup/item_0/id = 0
popup/item_1/text = "Option B"
popup/item_1/id = 1
popup/item_2/text = "Option C"
popup/item_2/id = 2
popup/item_3/text = "Option D"
popup/item_3/id = 3

[node name="IdentificationText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Identification answer?"

[node name="IdentificationInput" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Paris"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 30

[node name="SaveBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "save"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/QuestionTypeInput" to="." method="_on_question_type_input_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
